# operations-debs-contenttranslation-apertium-es-it

./: AUTHORS  Makefile.am  README  TODO  apertium-es-it.es-it.dix  apertium-es-it.es-it.t1x  apertium-es-it.es-it.t2x  apertium-es-it.es-it.t3x  apertium-es-it.es.dix  apertium-es-it.es.tsx  apertium-es-it.it-es.t1x  apertium-es-it.it-es.t2x  apertium-es-it.it-es.t3x  apertium-es-it.it.acx  apertium-es-it.post-es.dix  apertium-es-it.post-it.dix  apertium-es-it_0.1.0~r51165.orig.tar.gz.delta  apertium-es-it_0.1.0~r51165.orig.tar.gz.id  configure.ac  it-es-unsupervised.make  modes.xml  testvoc-apertium2-utf
debian/: changelog  control
dev/: inconsistency.sh  testvoc-summary.es-it.txt  testvoc-summary.it-es.txt  testvoc.sh
it-tagger-data/: README
